--- a/enduremetrics/src/main/resources/views/login-view.fxml
+++ b/enduremetrics/src/main/resources/views/login-view.fxml
@@ -12,7 +12,7 @@
 
 <StackPane prefHeight="500.0" prefWidth="700.0" stylesheets="@../css/styles.css"
     xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.alvaro.garmin.controller.LoginController">
+    fx:controller="com.alvaro.enduremetrics.controller.LoginController">
 
     <VBox fx:id="tarjetaLogin" alignment="CENTER" maxWidth="450.0" maxHeight="420.0" spacing="20.0"
         styleClass="card-form">
