--- a/enduremetrics/src/main/resources/views/main-view.fxml
+++ b/enduremetrics/src/main/resources/views/main-view.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane prefHeight="750.0" prefWidth="1100.0" stylesheets="@../css/styles.css"
    xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="com.alvaro.garmin.controller.MainController">
+   fx:controller="com.alvaro.enduremetrics.controller.MainController">
 
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="65.0" style="-fx-background-color: #0f172a;">
