--- a/enduremetrics/src/main/resources/views/profile-view.fxml
+++ b/enduremetrics/src/main/resources/views/profile-view.fxml
@@ -14,7 +14,7 @@
 
 <HBox alignment="TOP_CENTER" spacing="30.0" stylesheets="@../css/styles.css"
     xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.alvaro.garmin.controller.ProfileController">
+    fx:controller="com.alvaro.enduremetrics.controller.ProfileController">
 
     <VBox spacing="20.0" prefWidth="380.0" styleClass="card-form">
         <padding>
